Actualizado la memoria v1

--- a/latex/memoria.tex
+++ b/latex/memoria.tex
@@ -9,7 +9,7 @@
 \usepackage{microtype}
 \usepackage{placeins}
 % Bibliography management
-\usepackage[backend=bibtex]{biblatex}
+\usepackage[backend=bibtex,dateabbrev=false]{biblatex}
 \addbibresource{bibliografia.bib}
 
 \RequirePackage{booktabs}
@@ -382,11 +382,11 @@
 
 \noindent Dr.D. Raúl Marticorena Sánchez y Dr.D. Carlos Pardo Aguilar, profesores del departamento de Ingeniería Civil, área de Lenguajes y Sistemas Informáticos.
 
-\noindent Expone:
+\noindent Exponen:
 
 \noindent Que el alumno D. \nombre, con NIE X2149097T, ha realizado el Trabajo final de Grado en Ingeniería Informática titulado ``UBUMonitor - Monitorización de alumnos en la plataforma Moodle''. 
 
-\noindent Y que dicho trabajo ha sido realizado por el alumno bajo la dirección del que suscribe, en virtud de lo cual se autoriza su presentación y defensa.
+\noindent Y que dicho trabajo ha sido realizado por el alumno bajo la dirección de los que suscriben, en virtud de lo cual se autoriza su presentación y defensa.
 
 \begin{center} %\large
 En Burgos, {\large \today}
@@ -398,14 +398,14 @@ En Burgos, {\large \today}
 \begin{minipage}{0.45\textwidth}
 \begin{flushleft} %\large
 Vº. Bº. del Tutor:\\[2cm]
-Dr. Raúl Marticorena Sánchez
+Dr.D. Raúl Marticorena Sánchez
 \end{flushleft}
 \end{minipage}
 \hfill
 \begin{minipage}{0.45\textwidth}
 \begin{flushleft} %\large
 Vº. Bº. del co-tutor:\\[2cm]
-Dr. Carlos Pardo Aguilar
+Dr.D. Carlos Pardo Aguilar
 \end{flushleft}
 \end{minipage}
 \hfill
@@ -429,13 +429,13 @@ Dr. Carlos Pardo Aguilar
 \renewcommand*\abstractname{Resumen}
 \begin{abstract}
 
-El auge de las tecnologías ha alcanzado el ámbito educacional con las aulas de aprendizaje \textit{online} y enseñanza virtual con Moodle como uno de los protagonistas más importantes.
+El auge de las tecnologías ha alcanzado el ámbito educacional con las aulas de aprendizaje \textit{online} y la enseñanza virtual con Moodle como uno de los protagonistas más importantes.
 
 Este hecho ha transformado también el método de seguimiento de la evolución del alumnado durante el curso.
 
-En Moodle permite el seguimiento mediante la visualización de las calificaciones  y los registros de acceso de los alumnos. Sin embargo la forma de mostrar las calificaciones y registros de acceso al curso de los alumnos en Moodle es bastante laxa y poco práctica. Este inconveniente ha motivado la creación del presente proyecto como solución.
+Moodle permite el seguimiento mediante la visualización de las calificaciones  y los registros de acceso de los alumnos. Sin embargo la forma de mostrar las calificaciones y registros de acceso al curso de los alumnos en Moodle es bastante laxa y poco práctica. Este inconveniente ha motivado la creación del presente proyecto como solución.
 
-UBUMonitor es una aplicación de escritorio hecho en Java orientado a docentes que usen los servicios de Moodle. Permite a los profesores, previa identificación, acceder a datos estadísticos diferentes sobre las calificaciones y registros de los alumnos y mostrarlos en distintos tipos de gráficas, una forma mucho más práctica y visual. 
+UBUMonitor es una aplicación de escritorio hecho en Java orientado a docentes que usen los servicios de Moodle. Permite a los profesores, previa identificación, acceder a datos estadísticos diferentes sobre las calificaciones y registros de los alumnos y mostrarlos en distintos tipos de gráficas de una forma mucho más práctica y visual. 
 
 
 \end{abstract}
@@ -454,7 +454,7 @@ The technology boom has reached the educational field with online learning class
 
 This fact has also transformed the method of monitoring the evolution of students during the course.
 
-In Moodle, it allows students to monitor their grades and access records. However, the way in which grades and access records are displayed in Moodle is quite lax and impractical. This inconvenience has led to the creation of this project as a solution.
+Moodle allows students to monitor their grades and access records. However, the way in which grades and access records are displayed in Moodle is quite lax and impractical. This inconvenience has led to the creation of this project as a solution.
 
 UBUMonitor is a Java desktop application for teachers using Moodle services. It allows teachers, after identification, to access different statistical data on student grades and records and display them in different types of graphs, a much more practical and visual way. 
 \end{abstract}
