--- a/latex/tex/1_Introduccion.tex
+++ b/latex/tex/1_Introduccion.tex
@@ -2,10 +2,10 @@
 
 El presente proyecto es una continuación de dos trabajos anteriores, UBUGrades 2.0 \cite{nogal_santamaria_continuacion_2017} de Félix Nogal Santamaría y UBULogs \cite{fernandez_armengol_aplicacion_2017} de Oscar Fernández Armengol. 
 
-En ambos trabajos, la idea principal de la aplicación es el seguimiento de las calificaciones por una parte y registros de eventos por otra. Todo esto representado mediante diversas gráficas, una forma sencilla y visual de mostrar los datos.
+En ambos trabajos, la idea principal de la aplicación es el seguimiento de las calificaciones por una parte y registros de eventos por otra. Todo esto representado mediante diversas gráficas de una forma sencilla y visual.
 
-El desarrollo de la nueva aplicación se ha integrado ambos proyectos usando UBUGrades como base, sin embargo, UBULogs no funcionaba correctamente debido a los cambios en Moodle. Este hecho ha motivado empezar de cero en esta parte siguiendo una vía alternativa.
+El desarrollo de la nueva aplicación ha integrado ambos proyectos usando UBUGrades como base, sin embargo, UBULogs no funcionaba correctamente debido a los últimos cambios en Moodle. Este hecho ha motivado empezar de cero en esta parte siguiendo una vía alternativa.
 
-Se ha centrado también en la refactorización del código, guardar los datos en ficheros cifrados y nuevos gráficos para los registros de accesos.
+Se ha centrado también el trabajo en la refactorización del código, guardar los datos en ficheros cifrados y nuevos gráficos para los registros de accesos.
 
-En resumidas cuentas, está nueva versión del proyecto permite visualizar en diferentes gráficas las calificaciones de los alumnos por una parte y sobre los registros de eventos por otra parte. Todo esto con medidas de almacenaje de datos en local, y cifrados al contener información sensible. Esto posibilita acceder a los datos sin tener que realizar peticiones de recuperación de datos al servidor constantemente cada vez que se use la aplicación.
+En resumidas cuentas, esta nueva versión del proyecto permite visualizar en diferentes gráficas las calificaciones de los alumnos por una parte y sobre los registros de eventos por otra parte. Todo esto con medidas de almacenaje de datos en local, y cifrados al contener información sensible. Esto posibilita acceder a los datos sin tener que realizar peticiones de recuperación de datos al servidor constantemente cada vez que se use la aplicación.
