--- a/latex/tex/6_Trabajos_relacionados.tex
+++ b/latex/tex/6_Trabajos_relacionados.tex
@@ -1,8 +1,7 @@
 \capitulo{6}{Trabajos relacionados}
 
-En cuanto a los trabajos relacionados tenemos dos precedentes comentados anteriormente, UBUGrades y UBULogs hechos como Trabajos de Fin de Grado por alumnos de la universidad.
+En cuanto a los trabajos relacionados tenemos dos precedentes comentados anteriormente, UBUGrades y UBULogs hechos como Trabajos de Fin de Grado por alumnos de la universidad. También existe varios plugins de Moodle que realizan trabajos parecidos al proyecto.
 
-Existe varios plugins de Moodle que realizan trabajos parecidos al proyecto.
 
 \section{Heatmap}
 
@@ -13,7 +12,7 @@ Heatmap \cite{noauthor_moodle_nodate-2} superpone un mapa de calor (gradiente de
 \section{SmartKlass™ Learning Analytics Moodle}
 SmartKlass™ Learning Analytics Moodle \cite{noauthor_moodle_nodate-3} es un panel de análisis dirigido a docentes y estudiantes que muestra la evolución del rendimiento sobre el curso. Ejemplo en la figura \ref{fig:smartklass}.
 
-Aparentemente el proyecto lleva sin actualizarse desde hace 3 años\cite{noauthor_klassdata/moodle-local_smart_klass:_nodate}.
+Aparentemente el proyecto lleva sin actualizarse desde 2016 \cite{noauthor_klassdata/moodle-local_smart_klass:_nodate}.
 
 \imagenflotante{smartklass}{Ejemplo del panel SmartKlass}
 
