--- a/latex/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
+++ b/latex/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
@@ -2,16 +2,15 @@
 
 \section{Conclusiones}
 
-Después de finalizar el proyecto, una de las conclusiones que podemos sacar es que se ha cumplido bastante bien los objetivos planeados. Uno de los cambios más importantes fue empezar y modificar prácticamente todo el proyecto excepto la interfaz gráfica, ha salido mucho mejor de lo esperado.  
+Después de finalizar el proyecto, una de las conclusiones que podemos sacar es que se han cumplido bastante bien los objetivos planeados. Uno de los cambios más importantes fue empezar y modificar prácticamente todo el proyecto, excepto la interfaz gráfica y ha salido mucho mejor de lo esperado. 
 
 Se han implementado multitud de nuevas funcionalidades, algunas de ellas por iniciativa propia, como guardar en un fichero de configuración los nombres de usuario y el \textit{host}, imágenes de los participantes del curso facilitando la identificación y también mostrar la última vez que se accedió al servidor de Moodle.
 
-He aplicado lo aprendido de muchas de las asignaturas de la carrera, procesadores de lenguaje en las expresiones regulares, patrones de diseño y Java. De esto último he aplicado prácticamente todas sus características tales como herencia, genericidad, programación funcional o Java Stream. La curva de aprendizaje con JavaFx no fue muy complicada ya que había tenido experiencias previas con varios trabajos de la universidad con Tkinter\cite{noauthor_tkinter_nodate}, una librería de creación de interfaces gráficas pero en Python y con ciertos parecidos.
+He aplicado lo aprendido de muchas de las asignaturas de la carrera, procesadores de lenguaje en las expresiones regulares, patrones de diseño y Java. De esto último he empleado prácticamente todas sus características tales como herencia, genericidad, programación funcional o Java Stream. La curva de aprendizaje con JavaFx no fue muy complicada ya que había tenido experiencias previas con varios trabajos de la universidad con Tkinter \cite{noauthor_tkinter_nodate}, una librería de creación de interfaces gráficas pero en Python y con ciertos parecidos a JavaFx.
 
-
+El producto final es completamente funcional y actualmente hay varios profesores de la Universidad usándolo. También se encuentra en el \textbf{registro de propiedad intelectual  de la Universidad de Burgos} \cite{noauthor_registros_nodate}.
 
 En resumidas cuentas, en general he disfrutado mucho realizando el proyecto, con motivación se puede realizar grandes trabajos.
-
 
 \section{Líneas de trabajo futuras}
 
@@ -19,5 +18,7 @@ A pesar de cumplir los objetivos planteados, sí que se han encontrado otras fun
 
 \begin{itemize}
 	\item Empleo de técnicas de minería de datos que generan clúster de usuarios del curso. Estos clústeres se muestran en una gráfica de dispersión (en inglés \textit{scatter plot})
-	\item 
+	\item Que la aplicación funcione en modo sin conexión usando solo los ficheros en local. 
+	\item Buscar una librería alternativa a Google Charts \cite{noauthor_charts_nodate} de código libre.
+	\item Otro tipo de gráficas de registros de usuarios usando los módulos del curso.
 \end{itemize}
