--- a/latex/bibliografia.bib
+++ b/latex/bibliografia.bib
@@ -5,7 +5,7 @@
 	shorttitle = {Aplicación de escritorio para visualizar y comparar la actividad de los distintos usuarios de {Moodle} en los cursos. {La} herramienta debe permitir la integración con {UBUVirtual}. {Tecnologías}},
 	url = {https://github.com/trona85/GII-17.1B-UBULog-1.0},
 	urldate = {2019-05-20},
-	author = {Fernández Armengol, Oscar Fernández},
+	author = {Fernández Armengol, Oscar},
 	month = dec,
 	year = {2017}
 }
@@ -25,23 +25,14 @@
 	url = {https://insights.stackoverflow.com/survey/2019/?utm_source=social-share&utm_medium=social&utm_campaign=dev-survey-2019},
 	abstract = {Nearly 90,000 took this comprehensive, annual survey of people who code. Demographics. Most loved, dreaded and wanted technologies. Salary and careers.},
 	urldate = {2019-05-21},
-	journal = {Stack Overflow},
-	file = {Snapshot:C\:\\Users\\PC\\Zotero\\storage\\9ASDIR6Y\\2019.html:text/html}
-}
-
-@misc{noauthor_oracle_nodate,
-	title = {Oracle {Java} {SE} {Support} {Roadmap}},
-	url = {https://www.oracle.com/technetwork/java/java-se-support-roadmap.html},
-	urldate = {2019-06-09},
-	file = {Oracle Java SE Support Roadmap:C\:\\Users\\PC\\Zotero\\storage\\JMGH62FG\\java-se-support-roadmap.html:text/html}
+	journal = {Stack Overflow}
 }
 
 @misc{noauthor_http_nodate,
 	title = {{HTTP} {Methods} {GET} vs {POST}},
 	url = {https://www.w3schools.com/tags/ref_httpmethods.asp},
 	urldate = {2019-06-11},
-	author = {, W3School},
-	file = {HTTP Methods GET vs POST:C\:\\Users\\PC\\Zotero\\storage\\EDP4Q3DX\\ref_httpmethods.html:text/html}
+	author = {, W3School}
 }
 
 @misc{noauthor_que_2008,
@@ -52,8 +43,7 @@
 	urldate = {2019-06-11},
 	journal = {Proyectos Ágiles},
 	month = aug,
-	year = {2008},
-	file = {Snapshot:C\:\\Users\\PC\\Zotero\\storage\\KMK7YP2Y\\que-es-scrum.html:text/html}
+	year = {2008}
 }
 
 @misc{francia_que_nodate,
@@ -67,8 +57,7 @@ http://www.scrumguides.org/docs/scrumguide/v2016/2016-Scrum-Guide-Spanish.pdf\#z
 	language = {en},
 	urldate = {2019-06-11},
 	journal = {Scrum.org},
-	author = {Francia, Joel},
-	file = {Snapshot:C\:\\Users\\PC\\Zotero\\storage\\3KPRZM6I\\que-es-scrum.html:text/html}
+	author = {Francia, Joel}
 }
 
 @misc{noauthor_guifundamental_nodate,
@@ -77,8 +66,7 @@ http://www.scrumguides.org/docs/scrumguide/v2016/2016-Scrum-Guide-Spanish.pdf\#z
 	abstract = {Scrum es el método ágil de gestión de proyectos más usado en el mundo. Desde su presentación en 1995, ha sufrido muchos cambios y mejoras, consiguiendo...},
 	language = {es},
 	urldate = {2019-06-11},
-	journal = {Jerónimo Palacios},
-	file = {Snapshot:C\:\\Users\\PC\\Zotero\\storage\\CFFI3EQA\\scrum.html:text/html}
+	journal = {Jerónimo Palacios}
 }
 
 @misc{noauthor_scrum_2016,
@@ -90,29 +78,25 @@ http://www.scrumguides.org/docs/scrumguide/v2016/2016-Scrum-Guide-Spanish.pdf\#z
 	urldate = {2019-06-11},
 	journal = {Cloudi.ng Blog},
 	month = dec,
-	year = {2016},
-	file = {Snapshot:C\:\\Users\\PC\\Zotero\\storage\\BRS78TTP\\scrum-en-la-metodologia-agil-te-explicamos-que-es-y-como-funciona.html:text/html}
+	year = {2016}
 }
 
 @misc{noauthor_course_nodate,
 	title = {Course module - {MoodleDocs}},
 	url = {https://docs.moodle.org/dev/Course_module},
-	urldate = {2019-06-12},
-	file = {Course module - MoodleDocs:C\:\\Users\\PC\\Zotero\\storage\\A974RR5E\\Course_module.html:text/html}
+	urldate = {2019-06-12}
 }
 
 @misc{noauthor_grade_nodate,
 	title = {Grade items - {MoodleDocs}},
 	url = {https://docs.moodle.org/37/en/Grade_items},
-	urldate = {2019-06-12},
-	file = {Grade items - MoodleDocs:C\:\\Users\\PC\\Zotero\\storage\\VJCL5E69\\Grade_items.html:text/html}
+	urldate = {2019-06-12}
 }
 
 @misc{noauthor_course_nodate-1,
 	title = {Course categories - {MoodleDocs}},
 	url = {https://docs.moodle.org/37/en/Course_categories},
-	urldate = {2019-06-12},
-	file = {Course categories - MoodleDocs:C\:\\Users\\PC\\Zotero\\storage\\KE6SBWQI\\Course_categories.html:text/html}
+	urldate = {2019-06-12}
 }
 
 @misc{noauthor_api_nodate,
@@ -121,53 +105,40 @@ http://www.scrumguides.org/docs/scrumguide/v2016/2016-Scrum-Guide-Spanish.pdf\#z
 	url = {https://bbvaopen4u.com/es/actualidad/api-rest-que-es-y-cuales-son-sus-ventajas-en-el-desarrollo-de-proyectos},
 	abstract = {REST cambió por completo la ingeniería de software a partir del 2000. Este nuevo enfoque de desarrollo de proyectos y servicios web fue definido por Roy Fielding, el padre de la especificación HTTP y},
 	urldate = {2019-06-12},
-	journal = {BBVAOpen4U},
-	file = {Snapshot:C\:\\Users\\PC\\Zotero\\storage\\RW9S78ME\\api-rest-que-es-y-cuales-son-sus-ventajas-en-el-desarrollo-de-proyectos.html:text/html}
+	journal = {BBVAOpen4U}
 }
 
 @misc{noauthor_moodle_nodate,
 	title = {Moodle packages for {Windows}},
 	url = {https://download.moodle.org/windows/},
-	urldate = {2019-06-13},
-	file = {Moodle packages for Windows:C\:\\Users\\PC\\Zotero\\storage\\WIEV46ZD\\windows.html:text/html}
+	urldate = {2019-06-13}
 }
 
 @misc{noauthor_token_nodate,
 	title = {Token para ingreso - {MoodleDocs}},
 	url = {https://docs.moodle.org/all/es/Token_para_ingreso},
-	urldate = {2019-06-13},
-	file = {Token para ingreso - MoodleDocs:C\:\\Users\\PC\\Zotero\\storage\\QDKA9BFB\\Token_para_ingreso.html:text/html}
+	urldate = {2019-06-13}
 }
 
-@misc{noauthor_input_nodate,
+@misc{noauthor_<input_nodate,
 	title = {{\textless}input type="hidden"{\textgreater}},
 	url = {https://developer.mozilla.org/es/docs/Web/HTML/Elemento/input/hidden},
 	abstract = {input elements of type "hidden" let web developers include data that cannot be seen or modified by users when a form is submitted. For example, the ID of the content that is currently being ordered or edited, or a unique security token. Hidden inputs are completely invisible in the rendered page, and there is no way to make it visible in the page's content.},
 	language = {es},
 	urldate = {2019-06-13},
-	journal = {Documentación web de MDN},
-	file = {Snapshot:C\:\\Users\\PC\\Zotero\\storage\\WRQK2YR6\\hidden.html:text/html}
+	journal = {Documentación web de MDN}
 }
 
 @misc{noauthor_html_nodate,
 	title = {{HTML} input type="hidden"},
 	url = {https://www.w3schools.com/tags/att_input_type_hidden.asp},
-	urldate = {2019-06-13},
-	file = {HTML input type="hidden":C\:\\Users\\PC\\Zotero\\storage\\ZSHT47B8\\att_input_type_hidden.html:text/html}
+	urldate = {2019-06-13}
 }
 
 @misc{noauthor_moodle_nodate-1,
 	title = {Moodle demo},
 	url = {https://moodle.org/demo/},
-	urldate = {2019-06-13},
-	file = {Moodle demo:C\:\\Users\\PC\\Zotero\\storage\\2X828YFS\\demo.html:text/html}
-}
-
-@misc{noauthor_html_nodate-1,
-	title = {{HTML} input type="hidden"},
-	url = {https://www.w3schools.com/tags/att_input_type_hidden.asp},
-	urldate = {2019-06-14},
-	file = {HTML input type="hidden":C\:\\Users\\PC\\Zotero\\storage\\VWGEDXDR\\att_input_type_hidden.html:text/html}
+	urldate = {2019-06-13}
 }
 
 @misc{marti_que_2016,
@@ -180,8 +151,7 @@ http://www.scrumguides.org/docs/scrumguide/v2016/2016-Scrum-Guide-Spanish.pdf\#z
 	journal = {Sitelabs},
 	author = {Martí, Marq},
 	month = apr,
-	year = {2016},
-	file = {Snapshot:C\:\\Users\\PC\\Zotero\\storage\\8UFE8SMV\\web-scraping-introduccion-y-herramientas.html:text/html}
+	year = {2016}
 }
 
 @misc{noauthor_what_nodate,
@@ -191,30 +161,26 @@ http://www.scrumguides.org/docs/scrumguide/v2016/2016-Scrum-Guide-Spanish.pdf\#z
 	abstract = {Definition of back-end application: Computer program (such as server software) that remains in the background, or resides on a server located in a back room. A user, generally, interfaces only with a front-end application and rarely (if ...},
 	language = {en},
 	urldate = {2019-06-16},
-	journal = {BusinessDictionary.com},
-	file = {Snapshot:C\:\\Users\\PC\\Zotero\\storage\\3Y3IVLUR\\back-end-application.html:text/html}
+	journal = {BusinessDictionary.com}
 }
 
 @misc{zadok_[mdl-64298]_nodate,
 	title = {[{MDL}-64298] gradereport\_user\_get\_grade\_items fails when "{Course} {Grade} {Settings}" when "{Show} {Feedback}" is set to "{False}" for user reports - {Moodle} {Tracker}},
 	url = {https://tracker.moodle.org/browse/MDL-64298},
 	urldate = {2019-06-17},
-	author = {Zadok, Kin},
-	file = {[MDL-64298] gradereport_user_get_grade_items fails when "Course Grade Settings" when "Show Feedback" is set to "False" for user reports - Moodle Tracker:C\:\\Users\\PC\\Zotero\\storage\\BZ5AZQJ8\\MDL-64298.html:text/html}
+	author = {Zadok, Kin}
 }
 
 @misc{noauthor_plugins_nodate,
 	title = {Plugins · {Chart}.js documentation},
 	url = {https://www.chartjs.org/docs/latest/developers/plugins.html},
-	urldate = {2019-06-17},
-	file = {Plugins · Chart.js documentation:C\:\\Users\\PC\\Zotero\\storage\\2FRZYAPJ\\plugins.html:text/html}
+	urldate = {2019-06-17}
 }
 
 @misc{noauthor_chartjs-plugin-datalabels_nodate,
 	title = {chartjs-plugin-datalabels},
 	url = {https://chartjs-plugin-datalabels.netlify.com/},
-	urldate = {2019-06-17},
-	file = {chartjs-plugin-datalabels:C\:\\Users\\PC\\Zotero\\storage\\5J4SBHDX\\chartjs-plugin-datalabels.netlify.com.html:text/html}
+	urldate = {2019-06-17}
 }
 
 @misc{noauthor_bar_2019,
@@ -240,43 +206,37 @@ http://www.scrumguides.org/docs/scrumguide/v2016/2016-Scrum-Guide-Spanish.pdf\#z
 @misc{noauthor_moodle_nodate-2,
 	title = {Moodle plugins directory: {Heatmap}},
 	url = {https://moodle.org/plugins/block_heatmap},
-	urldate = {2019-06-18},
-	file = {Moodle plugins directory\: Heatmap:C\:\\Users\\PC\\Zotero\\storage\\BTPAJB2S\\block_heatmap.html:text/html}
+	urldate = {2019-06-18}
 }
 
 @misc{noauthor_moodle_nodate-3,
 	title = {Moodle plugins directory: {SmartKlass}™ {Learning} {Analytics} {Moodle}},
 	url = {https://moodle.org/plugins/local_smart_klass},
-	urldate = {2019-06-18},
-	file = {Moodle plugins directory\: SmartKlass™ Learning Analytics Moodle:C\:\\Users\\PC\\Zotero\\storage\\RK7VUMC3\\local_smart_klass.html:text/html}
+	urldate = {2019-06-18}
 }
 
-@misc{noauthor_klassdata/moodle-local_smart_klass_nodate,
+@misc{noauthor_klassdata/moodle-local_smart_klass:_nodate,
 	title = {klassdata/moodle-local\_smart\_klass: {Moodle} {Plugin} for {SmartKlass} {Learning} {Analytics} {Tool}},
 	url = {https://github.com/klassdata/moodle-local_smart_klass},
-	urldate = {2019-06-18},
-	file = {klassdata/moodle-local_smart_klass\: Moodle Plugin for SmartKlass Learning Analytics Tool:C\:\\Users\\PC\\Zotero\\storage\\WJFTZKZL\\moodle-local_smart_klass.html:text/html}
+	urldate = {2019-06-18}
 }
 
 @misc{noauthor_moodle_nodate-4,
 	title = {Moodle plugins directory: {Engagement} analytics},
 	url = {https://moodle.org/plugins/report_engagement},
-	urldate = {2019-06-18},
-	file = {Moodle plugins directory\: Engagement analytics:C\:\\Users\\PC\\Zotero\\storage\\25C5SRPQ\\report_engagement.html:text/html}
+	urldate = {2019-06-18}
 }
 
 @misc{noauthor_moodle_nodate-5,
 	title = {Moodle plugins directory: {Course} dedication: {Stats}},
 	url = {https://moodle.org/plugins/stats.php?plugin=block_dedication},
-	urldate = {2019-06-18},
-	file = {Moodle plugins directory\: Course dedication\: Stats:C\:\\Users\\PC\\Zotero\\storage\\9SMETNB5\\stats.html:text/html}
+	urldate = {2019-06-18}
 }
 
-@misc{noauthor_oracle_nodate-1,
+@misc{noauthor_oracle_nodate,
 	title = {Oracle {Java} {SE} {Support} {Roadmap}},
 	url = {https://www.oracle.com/technetwork/java/java-se-support-roadmap.html},
-	urldate = {2019-06-18},
-	file = {Oracle Java SE Support Roadmap:C\:\\Users\\PC\\Zotero\\storage\\IV86YFMP\\java-se-support-roadmap.html:text/html}
+	urldate = {2019-06-18}
 }
 
 @misc{noauthor_charts_nodate,
@@ -285,27 +245,62 @@ http://www.scrumguides.org/docs/scrumguide/v2016/2016-Scrum-Guide-Spanish.pdf\#z
 	abstract = {Interactive charts for browsers and mobile devices.},
 	language = {en},
 	urldate = {2019-06-18},
-	journal = {Google Developers},
-	file = {Snapshot:C\:\\Users\\PC\\Zotero\\storage\\U7MRFVPI\\chart.html:text/html}
+	journal = {Google Developers}
 }
 
 @misc{noauthor_schneier_nodate,
 	title = {Schneier on {Security}: {The} {Blowfish} {Encryption} {Algorithm}},
 	url = {https://www.schneier.com/academic/blowfish/},
-	urldate = {2019-06-18},
-	file = {Schneier on Security\: The Blowfish Encryption Algorithm:C\:\\Users\\PC\\Zotero\\storage\\D5FNELQL\\blowfish.html:text/html}
+	urldate = {2019-06-18}
 }
 
 @misc{noauthor_tkinter_nodate,
 	title = {{TkInter} - {Python} {Wiki}},
 	url = {https://wiki.python.org/moin/TkInter},
-	urldate = {2019-06-19},
-	file = {TkInter - Python Wiki:C\:\\Users\\PC\\Zotero\\storage\\2BH79E3X\\TkInter.html:text/html}
+	urldate = {2019-06-19}
 }
 
-@misc{noauthor_better_nodate,
-	title = {Better {BibTeX} for {Zotero}},
-	url = {https://retorque.re/zotero-better-bibtex/installation/},
-	urldate = {2019-06-19},
-	file = {Better BibTeX for Zotero:C\:\\Users\\PC\\Zotero\\storage\\VZQWJ9S6\\installation.html:text/html}
+@misc{noauthor_frequently_nodate,
+	title = {Frequently {Asked} {Questions} {\textbar} {Charts}},
+	url = {https://developers.google.com/chart/interactive/faq},
+	language = {en},
+	urldate = {2019-06-20},
+	journal = {Google Developers}
+}
+
+@misc{zeng_generate_2019,
+	title = {Generate color based on the given string (using {HSL} color space and {BKDRHash}).: zenozeng/color-hash},
+	copyright = {MIT},
+	shorttitle = {Generate color based on the given string (using {HSL} color space and {BKDRHash}).},
+	url = {https://github.com/zenozeng/color-hash},
+	urldate = {2019-06-20},
+	author = {Zeng, Zeno},
+	month = jun,
+	year = {2019}
+}
+
+@misc{noauthor_quick_nodate,
+	title = {Quick {Start} {\textbar} {Charts}},
+	url = {https://developers.google.com/chart/interactive/docs/quick_start},
+	language = {en},
+	urldate = {2019-06-20},
+	journal = {Google Developers}
+}
+
+@misc{noauthor_35/instalacion_nodate,
+	title = {35/{Instalación} de {Moodle} - {MoodleDocs}},
+	url = {https://docs.moodle.org/all/es/35/Instalaci%C3%B3n_de_Moodle#Requisitos},
+	urldate = {2019-06-20}
+}
+
+@misc{noauthor_instalacion_nodate,
+	title = {Instalación de {Moodle} - {MoodleDocs}},
+	url = {https://docs.moodle.org/all/es/Instalaci%C3%B3n_de_Moodle},
+	urldate = {2019-06-20}
+}
+
+@misc{noauthor_registros_nodate,
+	title = {Registros de {Propiedad} {Intelectual} {\textbar} {Universidad} de {Burgos}},
+	url = {https://www.ubu.es/otri/propiedad-industrial-e-intelectual/registros-de-propiedad-intelectual},
+	urldate = {2019-06-20}
 }
