--- a/latex/tex/2_Objetivos_del_proyecto.tex
+++ b/latex/tex/2_Objetivos_del_proyecto.tex
@@ -7,7 +7,7 @@ En este apartado mostraremos los diferentes objetivos que han surgido para reali
 \begin{itemize}
 	\item Modificar el código para conseguir una mejor mantenibiliad y facilidad de añadir nuevas funcionalidades. 
 	\item Guardar los datos de Moodle en ficheros cifrados con la finalidad de acceder más rápidamente a los datos sin tener que actualizar del servidor continuamente.
-	\item Implementar la parte de los registros (\textit{logs}), la descarga de los ficheros CSV desde Moodle hasta su clasificación según su tipo de evento.
+	\item Implementar la parte de los registros (\textit{logs}): la descarga de los ficheros CSV desde Moodle hasta su clasificación según su tipo de evento.
 	\item Gráficas nuevas para mostrar el número de registros por cada usuario y evento.
 \end{itemize}
 
@@ -21,8 +21,8 @@ En este apartado mostraremos los diferentes objetivos que han surgido para reali
 
 \section{Objetivos personales}
 \begin{itemize}
-	\item Aplicar lo máximo posible de lo aprendido de las asignaturas de la universidad.
+	\item Aplicar lo máximo posible de lo aprendido de las asignaturas de la Universidad.
 	\item Mejorar en la programación de Java profundizando en la genericidad, programación funcional y patrones de diseño.
-	\item Aportar a la comunidad de Moodle ayudando a la extracción de información de calificaciones y registros de los alumnos.
-	\item Mantener la motivación durante el desarrollo del trabajo, así es más fácil disfrutar realizar el proyecto.
+	\item Aportar a la comunidad de Moodle un producto que ayuda a la extracción de información de calificaciones y registros de los alumnos.
+	\item Mantener la motivación durante el desarrollo del trabajo, así es más fácil disfrutar de la realización del proyecto.
 \end{itemize}
