--- a/latex/tex/3_Conceptos_teoricos.tex
+++ b/latex/tex/3_Conceptos_teoricos.tex
@@ -6,7 +6,7 @@ En este apartado comentaremos sobre conceptos que aparecen en Moodle.
 
 \section{Conceptos de Moodle}
 
-//TODO Introduccion a moodle
+En este apartado se explicarán los diferentes conceptos que son especiales en Moodle. Además, estas definiciones son importantes porque se trabaja mucho con ellos en el proyecto.
 
 \subsection{Módulo del curso}
 El módulo del curso \cite{noauthor_course_nodate} (en inglés \textit{course module}) también abreviado como `cm', representa las \textbf{actividades} y \textbf{recursos} del curso (ejemplos en la figura \ref{fig:course_modules}). Estos contienen información sobre qué curso y sección se muestra, además de la configuración de visibilidad y otros datos relevantes. 
@@ -17,6 +17,7 @@ Los identificadores únicos de los módulos del curso se definen como \textbf{`c
 
 
 \subsubsection{Códigos nemotécnicos de los tipos de módulos del curso}
+Los códigos nemotécnicos se usa en Moodle para indentificar los diferentes tipos de módulos independientemente el idioma que esté el servidor de Moodle.
 
 Existen dos formas de buscar el código nemotécnico de un módulo del curso:
 \begin{itemize}
@@ -30,10 +31,10 @@ Existen dos formas de buscar el código nemotécnico de un módulo del curso:
 
 \subsubsection{Tipos de módulos del curso}
 
-En la tabla \ref{tabla:herramientasportipodeuso} muestra los diferentes tipos de módulos que se han encontrado en Moodle.
+En la tabla \ref{tabla:herramientasportipodeuso} se  muestran los diferentes tipos de módulos que se han encontrado en Moodle.
 
-
-\tablaSmall{Herramientas y tecnologías utilizadas en cada parte del proyecto}{l c c c c}{herramientasportipodeuso}
+ 
+\tablaSmall{Tabla de los diferentes tipos de módulos.}{l c c c c}{herramientasportipodeuso}
 { \multicolumn{1}{l}{Código nemotécnico} & Nombre en español & Nombre en inglés \\}{ 
 assign             & Tarea                    & Assignment          \\
 book               & Libro                    & Book                \\
@@ -65,10 +66,11 @@ workshop           & Taller                   & Workshop            \\
 
 \subsection{Ítem de calificación}
 El Ítem de calificación\cite{noauthor_grade_nodate} (en inglés \textit{Grade item}), es cada fila de la tabla de calificaciones.
-Las carpetas de la tabla, a parte de Ítem de calificación, se considera también como categoría (\textit{category}).
+Las carpetas de la tabla, aparte de Ítem de calificación, se considera también como categoría (\textit{category}).
 
 Los Ítem de calificación se puede mostrar mediante una tabla para un solo alumno (ver figura \ref{fig:item_calificacion}) o una tabla de todos los alumnos y todos los Ítems de calificaciones (ver figura \ref{fig:alternativa_grade_item})
-	
+
+Hay que tener en cuenta que no todas las actividades o recursos de los módulos del curso son calificables.
 
 \imagenflotante{item_calificacion}{Ejemplo de una tabla con varios Ítem de calificación.}
 
@@ -78,7 +80,7 @@ Las categorías de cursos\cite{noauthor_course_nodate-1} (en inglés \textit{cou
 \imagenflotante{course_categories}{Ejemplo de categorías del curso enmarcados en rojo.}
 
 \subsection{Registros}
-Los registros es un reporte de actividades realizadas por los usuarios, existe registros de sitio web y del curso. En este proyecto solo nos centraremos en el segundo caso, estos se acceden en desde el curso en la rueda de configuración \textit{Aún más... ->  Informes ->  Registros -> Conseguir estos registros}
+Los registros son informes de actividades realizadas por los usuarios, donde hay registros de sitio web y del curso. En este proyecto solo nos centraremos en el segundo caso. Estos se acceden desde el curso en la rueda de configuración \textit{Aún más... ->  Informes ->  Registros -> Conseguir estos registros}
 
 \imagen{registros}{Ejemplo de varias entradas de un registro.}
 
@@ -90,7 +92,7 @@ Todas las entradas del registros se muestra en una tabla con varias columnas:
 	\item \textbf{Usuario afectado}: Nombre y apellidos del usuario afectado por el evento o acción.
 	\item \textbf{Contexto del evento}: En qué lugar del curso se ha producido el registro.
 	\item \textbf{Componente}: puede indicar una actividad, un recurso o el sistema.
-	\item \textbf{Nombre del evento}: que evento o acción se ha realizado.
+	\item \textbf{Nombre del evento}: qué evento o acción se ha realizado.
 	\item \textbf{Descripción}: contiene la información de las anteriores columnas pero mostrando su identificador único (\textit{id}) en vez de los nombres usuarios. Cada descripción es única en función del \textbf{Componente} y \textbf{Nombre de evento}.
 	\item \textbf{Origen}: indica el tipo de fuente donde se ha generado el registro. Pueden ser:
 	\begin{itemize}
@@ -109,6 +111,7 @@ También ofrece la posibilidad de filtrar mediante diferente opciones y su desca
 
 El problema de los registros que ofrece Moodle es la laxa forma de visualizar los datos a pesar de las opciones de filtrado. Sobre todo la información de las \textbf{Descripciones} es confusa al mostrar los id's de usuarios, módulos del curso, etc...
 
-
+En la figura \ref{fig:group_added} es un ejemplo de entrada del registro que es confuso, no se muestra que grupo es. Solo indica el identificador del grupo. Otro de los problemas, no permite agrupar los registros de todos los usuarios y contar.
+\imagenflotante{group_added}{Ejemplo de entrada de registro}
 
 
