Actualizado la memoria

--- a/latex/bibliografia.bib
+++ b/latex/bibliografia.bib
@@ -304,3 +304,17 @@ http://www.scrumguides.org/docs/scrumguide/v2016/2016-Scrum-Guide-Spanish.pdf\#z
 	url = {https://www.ubu.es/otri/propiedad-industrial-e-intelectual/registros-de-propiedad-intelectual},
 	urldate = {2019-06-20}
 }
+
+@misc{noauthor_ubumonitor_nodate,
+	title = {{UBUMonitor} - yjx0003},
+	url = {https://sonarcloud.io/dashboard?id=UBUMonitor},
+	urldate = {2019-06-21}
+}
+
+@misc{noauthor_ubumonitor_nodate-1,
+	title = {{UBUMonitor} - {Codacy} - {Dashboard}},
+	url = {https://app.codacy.com/project/yjx0003/UBUMonitor/dashboard?bid=13120734},
+	abstract = {Discover the code quality of UBUMonitor an open source project in Java, HTML, Javascript, Markdown, JSON, XML, CSS - Dashboard},
+	language = {en},
+	urldate = {2019-06-21}
+}
