--- a/latex/tex/4_Tecnicas_y_herramientas.tex
+++ b/latex/tex/4_Tecnicas_y_herramientas.tex
@@ -145,5 +145,9 @@ color-hash \cite{zeng_generate_2019} es una librería que permite generar colore
 \href{https://html2canvas.hertzen.com/}{html2canvas}
 Realiza capturas de pantalla en una página web con JavaScript.
 
-\section{Herramientas de evaluación de código}
 
+
+\section{Sonarqube y Codacy}
+
+\href{https://www.sonarqube.org/}{SonarQube} y \href{https://www.codacy.com/}{Codacy} son herramientas de evaluación del código fuente, muestra los códigos duplicado, errores, vulnerabilidades y malas prácticas de programación. 
+Se instaló el plugin de Eclipse de Sonarqube llamado \href{https://www.sonarlint.org/}{SonarLint}.
