--- a/latex/tex/A_Plan_proyecto.tex
+++ b/latex/tex/A_Plan_proyecto.tex
@@ -2,11 +2,75 @@
 
 \section{Introducción}
 
+El plan de proyecto 
+
 \section{Planificación temporal}
+
+El desarrollo de la aplicación esta planteado usando Scrum como metodología de gestión del proyecto. Aunque cabe destacar que está adaptado para trabajar con una persona a diferencia de los 4-8 usuales y también con reuniones semanales en vez de diarias. A continuación se muestran las características que se han seguido de la filosofía ágil:
+
+
+\begin{itemize}
+	\item Desarrollo iterativo o incremental mediante interacciones (\textit{sprints}).
+	\item La duración de los \textit{sprints} han sido de uno a cuatro semanas y cada una de ellas contiene las tareas o \textit{issues} realizadas.
+	\item Reuniones semanales de más de una hora comentando el avance del desarrollo y presentando partes del producto final.
+	\item También se planifica las siguientes tareas a realizar durante las reuniones.
+	
+\end{itemize}
+
+\subsection{Sprint 0 (14/01/2019 - 08/02/2019)}
+
+Durante la primera semana se buscó reuniones con tres docentes de la Universidad (José Manuel Galán Ordax, Bruno Baruque Zanón y Rául Marticorena Sánchez) sobre posibles proyectos que tuvieran en mente.
+
+Después de hablar con los tres en esa semana, hubo varios de reflexión sobre la difícil elección del trabajo. Finalmente se elige el proyecto de Raúl Marticorena.
+
+En la siguiente semana se prepara la primera reunión comentando en profundidad los detalles del trabajo y los objetivos finales que se espera.
+
+En este \textit{sprint} también se prepara las instalaciones de las herramientas de necesarias para el desarrollo. Se ha usado el manual del programador aportado por el autor de  UBUGrades 2.0 \cite{} como medida de apoyo.
+
+
+\subsection{Sprint 1 (08/02/2019 - 15/02/2019)}
+
+Buscar la manera de guardar los datos extraídos del servicio web en ficheros locales cifrados usando la contraseña de acceso a Moodle como clave. Se decide usar el algoritmo de encriptación \textbf{Blowfish} \cite{} que permite claves de 32 hasta 448 bits. Cabe destacar que se han descartado los algoritmos de cifrado que usan tamaños específicos de claves. Un ejemplo de ellos es el algoritmo \textit{Advanced Encryption Standard} (AES) \cite{} que necesita claves de cifrado de 128, 192 o 256 bits.
+
+También se arregla un error del anterior proyecto el cual trataba al nombre de usuario como si fuera un correo.
+
+\subsection{Sprint 2 (15/02/2019 - 13/03/2019)}
+
+Durante este sprint se empieza a descargar el log mediante técnicas de web scraping.
+
+Refactorición de las clases de servicio web.
+
+
+\subsection{Sprint 3 (13/03/2019 - 21/03/2019)}
+Refactorización del paquete model
+Enlazar los usuarios y modulos del curso al log
+
+\subsection{Sprint 4 (21/03/2019 - 26/03/2019}
+Seguir refactorizando y arreglando bugs
+
+\subsection{Sprint 5 (26/03/2019 - 03/04/2019)}
+
+\subsection{Sprint 6 (03/04/2019 - 26/04/2019)}
+
+\subsection{Sprint 7 (26/04/2019 - 11/05/2019)}
+
+\subsection{Sprint 8 (11/05/2019 - 18/05/2019)}
+
+\subsection{Sprint 9 (18/05/2019 - 23/05/2019)}
+Empezar la documentación de la memoria. Probar si se puede añaadir grafica en funcion de componente y evento del registro
+
+\subsection{Sprint 10 (23/05/2019 - 08/06/2019)}
+
+\subsection{Sprint 11 (08/06/2019 - 22/06/2019)}
+
+\subsection{Sprint 12 (22/06/2019 - //TODO)}
+
 
 \section{Estudio de viabilidad}
 
 \subsection{Viabilidad económica}
+
+
 
 \subsection{Viabilidad legal}
 
